Letters guessed appear on the screen

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <div class="jumbotron">
         <h1 class="display-4">Soccer Hangman</h1>
         <p class="lead">Test your soccer knowledge by guessing these important terms</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
                 <h1 id="test">Testing</h1>
                 <img class="img-fluid" src="https://via.placeholder.com/300" alt="placeholder" >
                 <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
@@ -34,7 +33,7 @@
                     postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
                     nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-6">
                 <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
                     porro zril partiendo. Et audiam fierent temporibus per, sed in salutatus eloquentiam, quo invidunt
                     temporibus et. Et mucius viderer ius. Pertinax splendide cotidieque sit ad, no ius choro causae.
@@ -43,6 +42,7 @@
                     postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
                     nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
             <div id="blanks"></div>
+            <div class="remainingGuesses"></div>
                 </div>
         </div>
 
