Added div tags and rows to separate letters, blanks, and scores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../Word-Guess-Game/assets/css/style.css">
-    
+
 </head>
 
 <body>
@@ -18,13 +18,13 @@
     <div class="jumbotron">
         <h1 class="display-4">Soccer Hangman</h1>
         <p class="lead">Test your soccer knowledge by guessing these important terms</p>
-        
+
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <h1 id="test">Testing</h1>
-                <img class="img-fluid" src="https://via.placeholder.com/300" alt="placeholder" >
+                <img class="img-fluid" src="https://via.placeholder.com/300" alt="placeholder">
                 <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
                     porro zril partiendo. Et audiam fierent temporibus per, sed in salutatus eloquentiam, quo invidunt
                     temporibus et. Et mucius viderer ius. Pertinax splendide cotidieque sit ad, no ius choro causae.
@@ -41,9 +41,16 @@
                     In vel eirmod accusata, laudem expetenda vel ei. Vel in soluta essent tractatos. His ex ignota
                     postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
                     nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
-            <div id="blanks"></div>
-            <div class="remainingGuesses"></div>
+                <div class="row">
+                    <div class="col-md-12" id="blanks"></div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12" id="letterGuessed"><p>Letters Guessed: </p></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12"><p id="remainingGuesses">Remaining Guesses: </p></div>
+                </div>
+            </div>
         </div>
 
 
