--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <h1 id="test">Testing</h1>
-                <img class="img-fluid" src="https://via.placeholder.com/300" alt="placeholder">
+                <img class="img-fluid" id="image" src="https://via.placeholder.com/300" alt="placeholder">
                 <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
                     porro zril partiendo. Et audiam fierent temporibus per, sed in salutatus eloquentiam, quo invidunt
                     temporibus et. Et mucius viderer ius. Pertinax splendide cotidieque sit ad, no ius choro causae.
@@ -45,10 +45,10 @@
                     <div class="col-md-12" id="blanks"></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12" id="letterGuessed"><p>Letters Guessed: </p></div>
+                    <div class="col-md-12"><p>Remaining Guesses: <div id="remainingGuesses">10</div></p></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12"><p id="remainingGuesses">Remaining Guesses: </p></div>
+                    <div class="col-md-12" id="letterGuessed"><p>Letters Guessed: </p></div>
                 </div>
             </div>
         </div>
