Score keeping works properly

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     In vel eirmod accusata, laudem expetenda vel ei. Vel in soluta essent tractatos. His ex ignota
                     postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
                     nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
+                <div class="row"><p>Games Won: <span id="score">0</span></p></div>
                 <div class="row">
                     <div class="col-md-12" id="blanks"></div>
                 </div>
