cleaned up code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col-md-12" id="blanks"></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12"><p>Remaining Guesses: <div id="remainingGuesses">10</div></p></div>
+                    <div class="col-md-12"><p>Remaining Guesses: <span id="remainingGuesses">10</span></p></div>
                 </div>
                 <div class="row">
                     <div class="col-md-12" id="letterGuessed"><p>Letters Guessed: </p></div>
