photo appears upon guessing word correctly

--- a/index.html
+++ b/index.html
@@ -41,16 +41,26 @@
                     In vel eirmod accusata, laudem expetenda vel ei. Vel in soluta essent tractatos. His ex ignota
                     postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
                     nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
-                <div class="row"><p>Games Won: <span id="score">0</span></p></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Pess any key to begin</p>
+                        <p>Games Won: <span id="score">0</span></p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-12" id="blanks"></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12"><p>Remaining Guesses: <span id="remainingGuesses">10</span></p></div>
+                    <div class="col-md-12">
+                        <p>Remaining Guesses: <span id="remainingGuesses">10</span></p>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12" id="letterGuessed"><p>Letters Guessed: </p></div>
-                    <div id="image"></div>
+                    <div class="col-md-12" >
+                        <p>Letters Guessed: </p>
+                        <p id="letterGuessed"></p>
+                    </div>
+                    <div ><img id="image" src=""></div>
                 </div>
             </div>
         </div>
