moved photo location

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <h1 id="test">Testing</h1>
-                <img class="img-fluid" src="https://via.placeholder.com/300" alt="placeholder">
+                <img class="img-fluid" id="image" src="https://via.placeholder.com/300" alt="placeholder">
                 <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
                     porro zril partiendo. Et audiam fierent temporibus per, sed in salutatus eloquentiam, quo invidunt
                     temporibus et. Et mucius viderer ius. Pertinax splendide cotidieque sit ad, no ius choro causae.
@@ -60,7 +60,7 @@
                         <p>Letters Guessed: </p>
                         <p id="letterGuessed"></p>
                     </div>
-                    <div ><img id="image" src=""></div>
+                    <div ><img src=""></div>
                 </div>
             </div>
         </div>
