updated look of game

--- a/index.html
+++ b/index.html
@@ -17,30 +17,18 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Soccer Hangman</h1>
-        <p class="lead">Test your soccer knowledge by guessing these important terms</p>
+        <p class="lead">Test your soccer knowledge by guessing these common terms</p>
 
     </div>
-    <div class="container">
+    <div class="container bg-light mb-5">
         <div class="row">
-            <div class="col-md-4 col-sm-6">
-                <h1 id="test">Testing</h1>
-                <img class="img-fluid" id="image" src="https://via.placeholder.com/300" alt="placeholder">
-                <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
-                    porro zril partiendo. Et audiam fierent temporibus per, sed in salutatus eloquentiam, quo invidunt
-                    temporibus et. Et mucius viderer ius. Pertinax splendide cotidieque sit ad, no ius choro causae.
-
-                    In vel eirmod accusata, laudem expetenda vel ei. Vel in soluta essent tractatos. His ex ignota
-                    postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
-                    nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
+            <div class="col-md-6 col-sm-6 text-center">
+                <h1  id="wordBanner"></h1>
+                <img class="img-fluid" id="image" src="../Word-Guess-Game/assets/images/placeholder.jpg" alt="placeholder">
+                <p></p>
             </div>
-            <div class="col-md-8 col-sm-6">
-                <p>Lorem ipsum dolor sit amet, nec admodum vivendo officiis no. Duo commune mediocritatem ne, eu mel
-                    porro zril partiendo. Et audiam fierent temporibus per, sed in salutatus eloquentiam, quo invidunt
-                    temporibus et. Et mucius viderer ius. Pertinax splendide cotidieque sit ad, no ius choro causae.
-
-                    In vel eirmod accusata, laudem expetenda vel ei. Vel in soluta essent tractatos. His ex ignota
-                    postea oportere. Congue ponderum per et, mea ut inermis albucius, prompta menandri signiferumque no
-                    nec. Mel hinc regione sanctus te, tempor essent eos te, sea eu impetus mediocritatem.</p>
+            <div class="col-md-6 col-sm-6 text-center">
+                <p>Press any key to get started</p>
                 <div class="row">
                     <div class="col-md-12">
                         <p>Pess any key to begin</p>
@@ -64,9 +52,6 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
     <script src="../Word-Guess-Game/assets/javascript/game.js"></script>
 </body>
