game functions as expected with wins and losses

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 
 <body>
 
-    <div class="jumbotron">
-        <h1 class="display-4">Soccer Hangman</h1>
-        <p class="lead">Test your soccer knowledge by guessing these common terms</p>
 
-    </div>
-    <div class="container bg-light mb-5">
+    <div class="container bg-light">
+        <div class="jumbotron">
+            <h1 class="display-4">Soccer Hangman</h1>
+            <p class="lead">Test your soccer knowledge by guessing these common terms</p>
+
+        </div>
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center">
-                <h1  id="wordBanner"></h1>
+                <h1 id="wordBanner"></h1>
                 <img class="img-fluid" id="image" src="../Word-Guess-Game/assets/images/placeholder.jpg" alt="placeholder">
                 <p></p>
             </div>
             <div class="col-md-6 col-sm-6 text-center">
-                <p>Press any key to get started</p>
                 <div class="row">
                     <div class="col-md-12">
-                        <p>Pess any key to begin</p>
+                        <p class="mt-5">Pess any key to begin</p>
                         <p>Games Won: <span id="score">0</span></p>
                     </div>
                 </div>
@@ -44,11 +44,11 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12" >
+                    <div class="col-md-12">
                         <p>Letters Guessed: </p>
                         <p id="letterGuessed"></p>
                     </div>
-                    <div ><img src=""></div>
+                    <div><img src=""></div>
                 </div>
             </div>
         </div>
