--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-md-6 col-sm-6 text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="mt-5">Pess any key to begin</p>
+                        <p class="mt-5">Press any key to begin</p>
                         <p>Games Won: <span id="score">0</span></p>
                     </div>
                 </div>
