Changing asthetics to look better

--- a/index.html
+++ b/index.html
@@ -14,25 +14,24 @@
 </head>
 
 <body>
-
-
-    <div class="container bg-light">
+    
         <div class="jumbotron">
             <h1 class="display-4">Soccer Hangman</h1>
             <p class="lead">Test your soccer knowledge by guessing these common terms</p>
 
         </div>
+        <div class="container bg-light">
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center">
-                <h1 id="wordBanner"></h1>
+                <h2 id="wordBanner"></h2>
                 <img class="img-fluid" id="image" src="../Word-Guess-Game/assets/images/placeholder.jpg" alt="placeholder">
                 <p></p>
             </div>
             <div class="col-md-6 col-sm-6 text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="mt-5">Press any key to begin</p>
-                        <p>Games Won: <span id="score">0</span></p>
+                        <h1 class="mt-5 mb-3">Press any key to begin</h1>
+                        <h4>Games Won: <span id="score">0</span></h4>
                     </div>
                 </div>
                 <div class="row">
@@ -40,12 +39,12 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p>Remaining Guesses: <span id="remainingGuesses">10</span></p>
+                        <h4>Remaining Guesses: <span id="remainingGuesses">10</span></h4>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p>Letters Guessed: </p>
+                        <h4>Letters Guessed: </h4>
                         <p id="letterGuessed"></p>
                     </div>
                     <div><img src=""></div>
