added semi-transparent background to playing area and modified background image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="display-4">Soccer Hangman</h1>
         <p class="lead">Test your soccer knowledge by guessing these common terms</p>
     </div>
-    <div class="container bg-light">
+    <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
                 <img id="winner" src="">
