added footer and final style touches

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             </div>
         </div>
     </div>
+    <div class="footer bg-light">
+        <footer>By Chris Hein</footer>    
+    </div>
     <script src="../Word-Guess-Game/assets/javascript/game.js"></script>
 </body>
 
