--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             </div>
         </div>
     </div>
-    <div class="footer bg-light">
-        <footer>By Chris Hein</footer>    
-    </div>
+        <footer class="footer bg-light">By Chris Hein</footer>    
+
     <script src="../Word-Guess-Game/assets/javascript/game.js"></script>
 </body>
 
