readjusted footer and adjusted jumbotron

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="jumbotron">
+    <div class="jumbotron py-2">
         <h1 class="display-4">Soccer Hangman</h1>
         <p class="lead">Test your soccer knowledge by guessing these common terms</p>
     </div>
